--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 
-    <title>FragTag</title>
+    <title>Newsie</title>
 
      <!--Reset CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
@@ -27,7 +27,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.0/css/foundation-float.min.css" rel="stylesheet" />
 
  <style>
-      body { background-color: #F2F6D0 }
+      body { background-color: black; color: lime; }
       #wrapper {
         width: 960px;
         margin-left: auto;
@@ -47,7 +47,8 @@
       textarea, input {
         display: block;
         width: 100%;
-        background-color: #FCF5C7;
+        background-color: black;
+        color: lime;
       }
       input {
         height: 36px;
